卡片種類快捷鍵

--- a/compasscards.html
+++ b/compasscards.html
@@ -53,6 +53,13 @@
         </div>
         <div class="layout-center">
             <h1>卡片一覽</h1>
+            <ul class="card-menu">
+                <li><a href="">UR</a></li>
+                <li><a href="">SR</a></li>
+                <li><a href="">R</a></li>
+                <li><a href="">N</a></li>
+                <li><a href="">event</li>
+            </ul>
             <table class="cards">
                 <tr>
                     <td><button id="btn001" class="card"><img src="./img/UR/001.PNG" class="card-picture"></button></td>
