--- a/compasshome.html
+++ b/compasshome.html
@@ -11,7 +11,7 @@
 <body>
 
     <nav>
-        <a href="https://app.nhn-playart.com/compass/">
+        <a href="./compasshome.html">
             <img class="logo" src="./img/compasshome/headericon.png">
         </a>
         <div class="menu_f">
