menu變更(其他頁面)

--- a/compasscharacter.html
+++ b/compasscharacter.html
@@ -7,15 +7,12 @@
 
 <body>
     <nav>
-        <a href="https://app.nhn-playart.com/compass/">
-            <img class="logo" src="./下載.png">
-        </a>
         <div class="menu_f">
+            <a href="./compasshome.html">
+                <img class="logo" src="./img/compasshome/headericon.png">
+            </a>
             <div class="menu">
-                <ul>
-                    <li class="menu_item">
-                        <a class="menu_link" href="./compasshome.html">主頁</a>
-                    </li>
+                <ul class="menu_list">
                     <li class="menu_item">
                         <a class="menu_link" href="./compassnews.html">最新情報</a>
                     </li>
