--- a/compasscharacter.html
+++ b/compasscharacter.html
@@ -29,7 +29,29 @@
         </div>
     </nav>
     
-    
+    <article>
+        <div class="layout-left">
+            <ul class="linkmenu">
+                <li class="linkheader">最新活動</li>
+                <li class="link">六周年紀念任務</li>
+                <li class="link">六周年賽季</li>
+                <li class="link">科學超電磁砲連動</li>
+                <li class="link">2022原創英雄最終彈<br>阿爾‧達哈布=阿爾卡提亞</li>
+                <li class="linkheader">熱門角色</li>
+                <li class="link"></li>
+                <li class="link"></li>
+                <li class="link"></li>
+            </ul>
+        </div>
+        <div class="layout-center">
+
+        </div>
+        <div class="layout-right">
+            <a class="twitter-timeline" data-lang="ja" data-width="400px" data-height="700"
+                href="https://twitter.com/cps_niconico?ref_src=twsrc%5Etfw">Tweets by cps_niconico</a>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+    </article>
 </body>
 
 </html>
