--- a/compasscards.html
+++ b/compasscards.html
@@ -51,11 +51,11 @@
         <div class="layout-center">
             <h1>卡片一覽</h1>
             <ul class="card-menu">
-                <li><a href="">UR</a></li>
-                <li><a href="">SR</a></li>
-                <li><a href="">R</a></li>
-                <li><a href="">N</a></li>
-                <li><a href="">event</li>
+                <li><a href="./compasscards.html">UR</a></li>
+                <li><a href="./compasscards.html">SR</a></li>
+                <li><a href="./compasscards.html">R</a></li>
+                <li><a href="./compasscards.html">N</a></li>
+                <li><a href="./compasscards.html">event</li>
             </ul>
             <table class="cards">
                 <tr>
