--- a/compasscharacter.html
+++ b/compasscharacter.html
@@ -2,7 +2,9 @@
 
 <head>
     <title>#空帕斯</title>
+    <link href="./img/compasshome/icon.png" rel="shortcut icon" />
     <link href="./css/copmassnav.css" rel="stylesheet">
+    <link href="./css/compassarticle.css" rel="stylesheet">
 </head>
 
 <body>
