--- a/compasscards.html
+++ b/compasscards.html
@@ -50,7 +50,7 @@
         </div>
         <div class="layout-center">
             <h1>卡片一覽</h1>
-            <ul class="card-menu">
+            <ul class="card-rare">
                 <li><a href="./compasscards.html">UR</a></li>
                 <li><a href="./compasscards.html">SR</a></li>
                 <li><a href="./compasscards.html">R</a></li>
