--- a/compasscards.html
+++ b/compasscards.html
@@ -55,9 +55,9 @@
                 <li><a href="./compasscards.html">SR</a></li>
                 <li><a href="./compasscards.html">R</a></li>
                 <li><a href="./compasscards.html">N</a></li>
-                <li><a href="./compasscards.html">event</li>
+                <li><a href="./compasscards.html">EVENT</a></li>
             </ul>
-            
+
             <table class="cards">
                 <tr>
                     <td><button id="btn001" class="card"><img src="./img/UR/001.PNG" class="card-picture"></button></td>
