--- a/compasscharacter.html
+++ b/compasscharacter.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <div class="menu_f">
-            <a href="./compasshome.html">
+            <a href="./index.html">
                 <img class="logo" src="./img/compasshome/headericon.png">
             </a>
             <div class="menu">
