--- a/compasscards.html
+++ b/compasscards.html
@@ -13,7 +13,7 @@
 
     <nav>
         <div class="menu_f">
-            <a href="./compasshome.html">
+            <a href="./index.html">
                 <img class="logo" src="./img/compasshome/headericon.png">
             </a>
             <div class="menu">
