--- a/compasscharacter.html
+++ b/compasscharacter.html
@@ -5,9 +5,11 @@
     <link href="./img/compasshome/icon.png" rel="shortcut icon" />
     <link href="./css/copmassnav.css" rel="stylesheet">
     <link href="./css/compassarticle.css" rel="stylesheet">
+    <link href="./css/compasscharacter.css" rel="stylesheet">
 </head>
 
 <body>
+
     <nav>
         <div class="menu_f">
             <a href="./index.html">
@@ -46,6 +48,222 @@
             </ul>
         </div>
         <div class="layout-center">
+            <div class="character">
+                <a href=""><img src="./img/character/001.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/002.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/003.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/004.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/005.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/006.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/007.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/008.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/009.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/010.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/011.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/012.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/013.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/014.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/015.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/016.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/017.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/018.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/019.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/020.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/021.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/022.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/023.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/024.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/025.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/026.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/027.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/028.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/029.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/030.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/031.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/032.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/033.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/034.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/035.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/036.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/037.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/038.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/039.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/040.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/041.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/042.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/043.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/044.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/045.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/046.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/047.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/048.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/049.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/050.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/051.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/052.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/053.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/054.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/055.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/056.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/057.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/058.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/059.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/060.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/061.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/062.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/063.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/064.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/065.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/066.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/067.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/068.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/069.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/070.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/071.jpg"></a>
+            </div>
+            <div class="character">
+                <a href=""><img src="./img/character/072.jpg"></a>
+            </div>
 
         </div>
         <div class="layout-right">
