--- a/compasscharacter.html
+++ b/compasscharacter.html
@@ -48,34 +48,96 @@
             </ul>
         </div>
         <div class="layout-center">
-            <div class="character">
+            <table class="character-menu">
+                <tr>
+                    <td colspan="4"><button>ALL</button></td>
+                </tr>
+                <tr>
+                    <td colspan="4">職業</td>
+                </tr>
+                <tr>
+                    <td class="role"><button>戰士</button></td>
+                    <td class="role"><button>射手</button></td>
+                    <td class="role"><button>坦克</button></td>
+                    <td class="role"><button>跑者</button></td>
+                </tr>
+                <tr>
+                    <td colspan="4">系列</td>
+                </tr>
+                <tr>
+                    <td class="series" colspan="2"><button>聖騎士之戰 Guilty Gear</button></td>
+                    <td class="series" colspan="2"><button>Vocaloid</button></td>
+                </tr>
+                <tr>
+                    <td class="series" colspan="2"><button>快打旋風V</button></td>
+                    <td class="series" colspan="2"><button>Re:從零開始的異世界生活</button></td>
+                </tr>
+                <tr>
+                    <td class="series" colspan="2"><button>殺戮的天使</button></td>
+                    <td class="series" colspan="2"><button>槍彈辯駁</button></td>
+                </tr>
+                <tr>
+                    <td class="series" colspan="2"><button>為美好的世界獻上祝福！</button></td>
+                    <td class="series" colspan="2"><button>進擊的巨人</button></td>
+                </tr>
+                <tr>
+                    <td class="series" colspan="2"><button>貓宮日向</button></td>
+                    <td class="series" colspan="2"><button>命運石之門 Steins;Gate</button></td>
+                </tr>
+                <tr>
+                    <td class="series" colspan="2"><button>Fate/stay night[Heaven's Feel]</button></td>
+                    <td class="series" colspan="2"><button>超歌舞伎×千本櫻</button></td>
+                </tr>
+                <tr>
+                    <td class="series" colspan="2"><button>在地下城尋求邂逅是否搞錯了什麼III</button></td>
+                    <td class="series" colspan="2"><button>FINAL FANTASY XV</button></td>
+                </tr>
+                <tr>
+                    <td class="series" colspan="2"><button>文豪野犬</button></td>
+                    <td class="series" colspan="2"><button>萊莎的鍊金工房2 ～失落傳說與秘密妖精～</button></td>
+                </tr>
+                <tr>
+                    <td class="series" colspan="2"><button>女神異聞錄5</button></td>
+                    <td class="series" colspan="2"><button>OVERLORD IV</button></td>
+                </tr>
+                <tr>
+                    <td class="series" colspan="2"><button>刀劍神域 SWORD ART ONLINE</button></td>
+                    <td class="series" colspan="2"><button>尼爾：自動人形 NieR:Automata</button></td>
+                </tr>
+                <tr>
+                    <td class="series" colspan="2"><button>關於我轉生變成史萊姆這檔事</button></td>
+                    <td class="series" colspan="2"><button>科學超電磁砲T</button></td>
+                </tr>
+            </table>
+
+            <div class="original character">
                 <a href=""><img src="./img/character/001.jpg">十文字 中</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/002.jpg">正義 漢考克</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/003.jpg">魔法少女 莉莉卡</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/004.jpg">雙挽 乃保</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/005.jpg">櫻華 忠臣</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/006.jpg">聖女 貞德</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/007.jpg">馬爾克斯'55</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/008.jpg">盧西亞諾</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/009.jpg">Voidoll</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/010.jpg">深川 纏</a>
             </div>
             <div class="character">
@@ -84,19 +146,19 @@
             <div class="character">
                 <a href=""><img src="./img/character/012.jpg">蒂姬</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/013.jpg">古斯塔夫 海德里希</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/014.jpg">尼古拉 特斯拉</a>
             </div>
             <div class="character">
                 <a href=""><img src="./img/character/015.jpg">初音 未來</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/016.jpg">維歐蕾塔 諾瓦</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/017.jpg">可可莉柯特 布蘭修</a>
             </div>
             <div class="character">
@@ -105,16 +167,16 @@
             <div class="character">
                 <a href=""><img src="./img/character/019.jpg">CHUN-LI</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/020.jpg">瑪麗亞=S=雷歐布魯克</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/021.jpg">亞當=尤利耶夫</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/022.jpg">13 ✝Thirteen✝</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/023.jpg">新手勇者</a>
             </div>
             <div class="character">
@@ -126,7 +188,7 @@
             <div class="character">
                 <a href=""><img src="./img/character/026.jpg">凱=奇斯克</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/027.jpg">妹格妹格</a>
             </div>
             <div class="character">
@@ -135,19 +197,19 @@
             <div class="character">
                 <a href=""><img src="./img/character/029.jpg">鏡音 連</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/030.jpg">伊斯塔卡</a>
             </div>
             <div class="character">
                 <a href=""><img src="./img/character/031.jpg">札克&瑞吉兒</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/032.jpg">輝龍院奇拉拉</a>
             </div>
             <div class="character">
                 <a href=""><img src="./img/character/033.jpg">黑白熊</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/034.jpg">維納斯 波羅羅裘</a>
             </div>
             <div class="character">
@@ -156,16 +218,16 @@
             <div class="character">
                 <a href=""><img src="./img/character/036.jpg">惠惠</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/037.jpg">索恩=尤利耶夫</a>
             </div>
             <div class="character">
                 <a href=""><img src="./img/character/038.jpg">里維</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/039.jpg">惡魔薄荷鬼龍 黛露敏</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/040.jpg">湯瑪士</a>
             </div>
             <div class="character">
@@ -174,7 +236,7 @@
             <div class="character">
                 <a href=""><img src="./img/character/042.jpg">岡部 倫太郎</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/043.jpg">零夜</a>
             </div>
             <div class="character">
@@ -183,10 +245,10 @@
             <div class="character">
                 <a href=""><img src="./img/character/045.jpg">吉爾伽美什</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/046.jpg">魔法少女 露露卡</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/047.jpg">皮埃爾77世</a>
             </div>
             <div class="character">
@@ -195,13 +257,13 @@
             <div class="character">
                 <a href=""><img src="./img/character/049.jpg">艾絲 華倫斯坦</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/050.jpg">狐笑 甘色</a>
             </div>
             <div class="character">
                 <a href=""><img src="./img/character/051.jpg">諾克提斯</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/052.jpg">HM-WA100 尼德霍格</a>
             </div>
             <div class="character">
@@ -210,25 +272,25 @@
             <div class="character">
                 <a href=""><img src="./img/character/054.jpg">芥川 龍之介</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/055.jpg">遊戲火箭筒女孩</a>
             </div>
             <div class="character">
                 <a href=""><img src="./img/character/056.jpg">萊莎琳‧斯托特</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/057.jpg">青春愛麗絲</a>
             </div>
             <div class="character">
                 <a href=""><img src="./img/character/058.jpg">JOKER</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/059.jpg">伊格尼斯=威爾=威斯普</a>
             </div>
             <div class="character">
                 <a href=""><img src="./img/character/060.jpg">安茲‧烏爾‧恭</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/061.jpg">糸迴輪迴</a>
             </div>
             <div class="character">
@@ -237,10 +299,10 @@
             <div class="character">
                 <a href=""><img src="./img/character/063.jpg">亞絲娜</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/064.jpg">Bugdoll</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/065.jpg">斯特利亞‧拉拉‧席爾瓦</a>
             </div>
             <div class="character">
@@ -249,13 +311,13 @@
             <div class="character">
                 <a href=""><img src="./img/character/067.jpg">2B</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/068.jpg">拉薇‧秀秀瑪爾榭‧可兒‧蝙蝠</a>
             </div>
             <div class="character">
                 <a href=""><img src="./img/character/069.jpg">利姆路=坦派斯特</a>
             </div>
-            <div class="character">
+            <div class="original character">
                 <a href=""><img src="./img/character/070.jpg">阿爾‧達哈布=阿爾卡地亞</a>
             </div>
             <div class="character">
