--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="./css/copmassnav.css" rel="stylesheet">
     <link href="./css/compassarticle.css" rel="stylesheet">
     <link href="./css/compasshome.css" rel="stylesheet">
+    <meta name="google-site-verification" content="C-PoGpQ1-IahOy3jEHbd0ico44vdtZVyT8bEzVtepmA" />
 </head>
 
 <body>
