--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 
 <head>
-    <title>#空帕斯</title>
+    <title>#空帕斯:陣地攻防戰|中文資訊網</title>
     <link href="./img/compasshome/icon.png" rel="shortcut icon" />
     <link href="./css/copmassnav.css" rel="stylesheet">
     <link href="./css/compassarticle.css" rel="stylesheet">
     <link href="./css/compasshome.css" rel="stylesheet">
     <meta name="google-site-verification" content="C-PoGpQ1-IahOy3jEHbd0ico44vdtZVyT8bEzVtepmA" />
-    <meta name="description" content="#空帕斯:陣地攻防戰 中文攻略網站">
+    <meta name="description" content="#空帕斯:陣地攻防戰|中文資訊網">
 </head>
 
 <body>
