--- a/cards.html
+++ b/cards.html
@@ -19,15 +19,15 @@
             <div class="menu">
                 <ul class="menu_list">
                     <li class="menu_item">
-                        <a class="menu_link" href="./compassnews.html">最新情報</a>
+                        <a class="menu_link" href="./news.html">最新情報</a>
                     </li>
 
                     <li class="menu_item">
-                        <a class="menu_link" href="./compasscharacter.html">角色一覽</a>
+                        <a class="menu_link" href="./character.html">角色一覽</a>
                     </li>
 
                     <li class="menu_item">
-                        <a class="menu_link" href="./compasscards.html">卡片一覽</a>
+                        <a class="menu_link" href="./cards.html">卡片一覽</a>
                     </li>
                 </ul>
             </div>
@@ -51,11 +51,11 @@
         <div class="layout-center">
             <h1>卡片一覽</h1>
             <ul class="card-rare">
-                <li><a href="./compasscards.html">UR</a></li>
-                <li><a href="./compasscards.html">SR</a></li>
-                <li><a href="./compasscards.html">R</a></li>
-                <li><a href="./compasscards.html">N</a></li>
-                <li><a href="./compasscards.html">EVENT</a></li>
+                <li><a href="./cards.html">UR</a></li>
+                <li><a href="./cards.html">SR</a></li>
+                <li><a href="./cards.html">R</a></li>
+                <li><a href="./cards.html">N</a></li>
+                <li><a href="./cards.html">EVENT</a></li>
             </ul>
 
             <table class="cards">
