--- a/news.html
+++ b/news.html
@@ -18,15 +18,15 @@
             <div class="menu">
                 <ul class="menu_list">
                     <li class="menu_item">
-                        <a class="menu_link" href="./compassnews.html">最新情報</a>
+                        <a class="menu_link" href="./news.html">最新情報</a>
                     </li>
 
                     <li class="menu_item">
-                        <a class="menu_link" href="./compasscharacter.html">角色一覽</a>
+                        <a class="menu_link" href="./character.html">角色一覽</a>
                     </li>
 
                     <li class="menu_item">
-                        <a class="menu_link" href="./compasscards.html">卡片一覽</a>
+                        <a class="menu_link" href="./cards.html">卡片一覽</a>
                     </li>
                 </ul>
             </div>
